; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_ringbuf/extr_ringbuf.c_xRingbufferReceive.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_ringbuf/extr_ringbuf.c_xRingbufferReceive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pdTRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xRingbufferReceive(i64 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64* %1, i64** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i64, i64* %5, align 8
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @configASSERT(i32* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i64 @prvReceiveGeneric(i32* %15, i8** %9, i32* null, i64* %10, i32* null, i32 0, i32 %16)
  %18 = load i64, i64* @pdTRUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %28

20:                                               ; preds = %3
  %21 = load i64*, i64** %6, align 8
  %22 = icmp ne i64* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i64, i64* %10, align 8
  %25 = load i64*, i64** %6, align 8
  store i64 %24, i64* %25, align 8
  br label %26

26:                                               ; preds = %23, %20
  %27 = load i8*, i8** %9, align 8
  store i8* %27, i8** %4, align 8
  br label %29

28:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %29

29:                                               ; preds = %28, %26
  %30 = load i8*, i8** %4, align 8
  ret i8* %30
}

declare dso_local i32 @configASSERT(i32*) #1

declare dso_local i64 @prvReceiveGeneric(i32*, i8**, i32*, i64*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
